# testpilot-core

./: .gitignore  .pre-commit-config.yaml  .project-policy.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  full_diff.patch  install-manifest.yaml  pyproject.toml
.github/: copilot-instructions.md
changelog.d/: add-sample-echo-plugin.md  dut-version-manifest.md  feat-azure-agent-cost-report.md  feat-html-report-hybrid-summary-layout.md  feat-plugin-version-inventory.md  feat-tier2-env-recovery.md  fix-build-bundle-thirdparty-constraint.md  fix-copilot-sdk-permission.md  fix-manifest-core-public.md  fix-md-report-hybrid-summary-align.md  fix-topology-tests-self-contained.md  install-flow-latest.md  policy-engine-v1010.md  policy-engine-v1012.md  serialwrap-pin-0-2-4.md  station-console-profile.md
docs/: AUDIT_GUIDE_INDEX.md  COMPREHENSIVE_AUDIT_GUIDE.md  audit-guide.md  audit-guide.md.legacy.bak  audit-todo.md  plan.md  plugin-dev-guide.md  release-flow.md  spec.md  test-plan.md  todos.md
examples/sample_echo/: README.md  pyproject.toml
examples/sample_echo/src/testpilot_sample_echo/: __init__.py  plugin.py  testbed.yaml.example
examples/sample_echo/src/testpilot_sample_echo/cases/: echo-hello.yaml
examples/sample_echo/tests/: conftest.py  test_sample_echo.py  test_sample_echo_boundary.py
plugins/: __init__.py
scripts/: build-bundle.sh  check_audit_yaml_provenance.py  check_release_version.py  install.sh  run_3x_full.sh  wifi_llapi_reconcile_inventory.py  wifi_llapi_strip_oracle_metadata.py
tests/: test_advisory.py  test_agent_invocation.py  test_agent_recovery_gate.py  test_agent_runtime.py  test_api_surface_for_audit.py  test_assistance_metrics.py  test_azure_agent_runtime.py  test_azure_agent_runtime_boundary.py  test_azure_auth.py  test_boundary_control_verdict.py  test_installer.py  (+57 more)
(+286 files in other folders)
