[project]
name = "testpilot-core"
dynamic = ["version"]
description = "Plugin-based test automation framework for embedded device verification"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.1,<8.4",
    "rich>=13.0",
    "openpyxl>=3.1",
    "ruamel.yaml>=0.17.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
testpilot = "testpilot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["src/testpilot"]

[tool.hatch.build.targets.wheel.force-include]
"skills/testpilot-normal-test" = "testpilot/_skills/testpilot-normal-test"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
]
